@startuml
entity "D_EstacaoAno" as d_ea {
    *d_id : numeric <<generated>> <<PK>>
    --
    nome_estacao : text
}

entity "D_Data" as d_dt {
    *d_id : numeric <<generated>> <<PK>>
    --
    ano : numeric
    mes : numeric
    dia : numeric
}

entity "D_Hora" as d_hr {
    *d_id : numeric <<generated>> <<PK>>
    *d_data : numeric <<PK>>
    --
    hora : numeric
    minuto : numeric
}

entity "D_DiaNoite" as d_dn {
    *d_id : numeric <<generated>> <<PK>>
    --
    momento_dia : text
}

entity "F_Tempo" as f_t {
    *d_estacao_ano : numeric <<PK>>
    *d_data : numeric <<PK>>
    *d_hora : numeric <<PK>>
    *d_dia_noite : numeric <<PK>>
    --
    temperatura : numeric
    umidade : numeric
    pressao_atmosfetica : numeric
    visibilidade : numeric
    --
    hora_coleta : datetime
}

d_ea ||--o{ f_t
d_dt ||--o{ f_t
f_t }o--|| d_hr
f_t }o--|| d_dn
@enduml